// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`findPathToPosition element after syntax error 1`] = `
Object {
  "found": true,
  "path": "$['targets'][0]['terms'][0]['content'][1]['content'][1]['attributes']['']['name']",
  "remainingString": "",
  "startString": "",
}
`;

exports[`findPathToPosition element attribute area 1`] = `
Object {
  "found": true,
  "path": "$['targets'][0]['terms'][0]['attributes']['']['name']",
  "remainingString": "",
  "startString": "",
}
`;

exports[`findPathToPosition element attribute name 1`] = `
Object {
  "found": true,
  "path": "$['targets'][1]['terms'][0]['content'][1]['content'][1]['content'][3]['attributes']['Path']['name']",
  "remainingString": "h",
  "startString": "Pat",
}
`;

exports[`findPathToPosition element attribute value 1`] = `
Object {
  "found": true,
  "path": "$['targets'][1]['terms'][0]['content'][1]['content'][1]['content'][3]['attributes']['Path']['value']",
  "remainingString": "roduct/@UI.CriticalityLabels/0/Label",
  "startString": "P",
}
`;

exports[`findPathToPosition element content after unclosed element 1`] = `
Object {
  "path": "targets/0/terms/0/content/0/text",
  "range": Object {
    "end": Object {
      "character": 4,
      "line": 6,
    },
    "start": Object {
      "character": 36,
      "line": 5,
    },
  },
}
`;

exports[`findPathToPosition element element content 1`] = `
Object {
  "found": true,
  "path": "$['targets'][0]['terms'][0]['content'][1]['content'][1]['content'][0]['text']",
  "remainingString": "
                ",
  "startString": "",
}
`;

exports[`findPathToPosition element element content before annotation 1`] = `
Object {
  "found": true,
  "path": "$['targets'][0]['terms'][0]['attributes']['']['name']",
  "remainingString": "",
  "startString": "",
}
`;

exports[`findPathToPosition element element content before annotation for completion 1`] = `
Object {
  "found": true,
  "path": "$['targets'][0]['terms']",
  "remainingString": "",
  "startString": "",
}
`;

exports[`findPathToPosition element element content with no name range 1`] = `
Object {
  "found": true,
  "path": "$['targets'][0]['terms'][0]['content'][0]['text']",
  "remainingString": "test",
  "startString": "",
}
`;

exports[`findPathToPosition element empty attribute value 1`] = `
Object {
  "found": true,
  "path": "$['targets'][0]['terms'][0]['attributes']['String']['value']",
  "remainingString": "",
  "startString": "",
}
`;

exports[`findPathToPosition element empty element content 1`] = `
Object {
  "found": true,
  "path": "$['targets'][0]['terms'][0]['content'][1]['content'][0]['text']",
  "remainingString": "",
  "startString": "",
}
`;

exports[`findPathToPosition element empty element name 1`] = `
Object {
  "found": true,
  "path": "$['targets'][0]['terms'][0]['content'][1]['name']",
  "remainingString": "",
  "startString": "",
}
`;

exports[`findPathToPosition element name 1`] = `
Object {
  "found": true,
  "path": "$['targets'][1]['terms'][0]['content'][1]['content'][1]['name']",
  "remainingString": "cord",
  "startString": "Re",
}
`;

exports[`findPathToPosition element text node value 1`] = `
Object {
  "found": true,
  "path": "$['targets'][0]['terms'][0]['content'][1]['content'][1]['content'][1]['content'][1]['content'][0]['text']",
  "remainingString": "egatedPrice",
  "startString": "Aggr",
}
`;

exports[`findPathToPosition element unclosed element name 1`] = `
Object {
  "path": "targets/0/terms/0/content/0/name/$0",
  "range": Object {
    "end": Object {
      "character": 37,
      "line": 5,
    },
    "start": Object {
      "character": 37,
      "line": 5,
    },
  },
}
`;

exports[`findPathToPosition namespace schema content 1`] = `
Object {
  "found": true,
  "path": "$['namespace']['targets']",
  "remainingString": "",
  "startString": "",
}
`;

exports[`findPathToPosition reference reference alias 1`] = `
Object {
  "found": true,
  "path": "$['references'][0]['alias']",
  "remainingString": "s",
  "startString": "Analytic",
}
`;

exports[`findPathToPosition reference reference namespace name 1`] = `
Object {
  "found": true,
  "path": "$['references'][0]['name']",
  "remainingString": "cs.v1",
  "startString": "com.sap.vocabularies.Analyti",
}
`;

exports[`findPathToPosition target annotation element name 1`] = `
Object {
  "found": true,
  "path": "$['targets'][0]['']",
  "remainingString": "",
  "startString": "",
}
`;

exports[`findPathToPosition target target content 1`] = `
Object {
  "found": true,
  "path": "$['targets'][0]['terms']",
  "remainingString": "",
  "startString": "",
}
`;

exports[`findPathToPosition target target name 1`] = `
Object {
  "found": true,
  "path": "$['targets'][1]['name']",
  "remainingString": "dents/priority",
  "startString": "IncidentService.Inci",
}
`;

exports[`getPositionData basic empty path 1`] = `
Object {
  "found": true,
  "path": "$",
  "remainingString": "",
  "startString": "",
}
`;

exports[`getPositionData basic root 1`] = `
Object {
  "found": true,
  "path": "$['']",
  "remainingString": "",
  "startString": "",
}
`;

exports[`getPositionData elements attribute area 1`] = `
Object {
  "found": true,
  "path": "$['targets'][0]['terms'][0]['attributes']['$0']",
  "remainingString": "",
  "startString": "",
}
`;

exports[`getPositionData elements attribute name 1`] = `
Object {
  "found": true,
  "path": "$['targets'][1]['terms'][0]['content'][1]['content'][1]['content'][3]['attributes']['Path']['name']",
  "remainingString": "h",
  "startString": "Pat",
}
`;

exports[`getPositionData elements attribute value 1`] = `
Object {
  "found": true,
  "path": "$['targets'][1]['terms'][0]['content'][1]['content'][1]['content'][3]['attributes']['Path']['value']",
  "remainingString": "roduct/@UI.CriticalityLabels/0/Label",
  "startString": "P",
}
`;

exports[`getPositionData elements element content 1`] = `
Object {
  "found": true,
  "path": "$['targets'][1]['terms'][0]['content'][1]['content'][1]['content'][0]['text']",
  "remainingString": "
                            ",
  "startString": "",
}
`;

exports[`getPositionData elements empty element content 1`] = `
Object {
  "found": true,
  "path": "$['targets'][0]['terms'][0]['content'][1]['content']['$0']",
  "remainingString": "",
  "startString": "",
}
`;

exports[`getPositionData elements empty element name 1`] = `
Object {
  "found": true,
  "path": "$['targets'][0]['terms'][0]['content'][1]['name']",
  "remainingString": "",
  "startString": "",
}
`;

exports[`getPositionData elements name 1`] = `
Object {
  "found": true,
  "path": "$['targets'][1]['terms'][0]['content'][1]['content'][1]['name']",
  "remainingString": "cord",
  "startString": "Re",
}
`;

exports[`getPositionData elements text node value 1`] = `
Object {
  "found": true,
  "path": "$['targets'][2]['terms'][0]['content'][1]['content'][1]['content'][5]['content'][1]['content'][0]['text']",
  "remainingString": "egatedPrice",
  "startString": "Aggr",
}
`;

exports[`getPositionData namespace schema content 1`] = `
Object {
  "found": true,
  "path": "$['namespace']['targets']",
  "remainingString": "",
  "startString": "",
}
`;

exports[`getPositionData references alias 1`] = `
Object {
  "found": true,
  "path": "$['references'][0]['alias']",
  "remainingString": "s",
  "startString": "Analytic",
}
`;

exports[`getPositionData references name 1`] = `
Object {
  "found": true,
  "path": "$['references'][0]['name']",
  "remainingString": "cs.v1",
  "startString": "com.sap.vocabularies.Analyti",
}
`;

exports[`getPositionData targets annotation element name 1`] = `
Object {
  "found": true,
  "path": "$['targets'][0]['']",
  "remainingString": "",
  "startString": "",
}
`;

exports[`getPositionData targets content 1`] = `
Object {
  "found": true,
  "path": "$['targets'][0]['terms']",
  "remainingString": "",
  "startString": "",
}
`;

exports[`getPositionData targets name 1`] = `
Object {
  "found": true,
  "path": "$['targets'][1]['name']",
  "remainingString": "dents/priority",
  "startString": "IncidentService.Inci",
}
`;
